chore(core): fixed overflow issue in post

--- a/packages/core/src/components/Embed/embed.module.css
+++ b/packages/core/src/components/Embed/embed.module.css
@@ -142,6 +142,7 @@
 }
 
 .fourImagesContainer {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 0.25rem;
