--- a/packages/core/src/components/PostContent/post-content.module.css
+++ b/packages/core/src/components/PostContent/post-content.module.css
@@ -3,6 +3,7 @@
   line-height: 1.5rem;
   overflow-wrap: break-word;
   white-space: pre-wrap;
+  width: 100%;
 }
 @media (min-width: 300px) {
   .content {
